module(name = "absl_cord_odr_issue")

bazel_dep(name = "abseil-cpp", version = "20230802.0.bcr.1", repo_name = "com_google_absl")
bazel_dep(name = "pybind11_bazel", version = "2.12.0")
bazel_dep(name = "platforms", version = "0.0.9")
bazel_dep(name = "rules_python", version = "0.31.0")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "pybind11",
    build_file = "@pybind11_bazel//:pybind11-BUILD.bazel",
    strip_prefix = "pybind11-master",
    urls = ["https://github.com/pybind/pybind11/archive/refs/heads/master.tar.gz"],
)

http_archive(
    name = "pybind11_abseil",
    strip_prefix = "pybind11_abseil-master",
    urls = ["https://github.com/pybind/pybind11_abseil/archive/refs/heads/master.tar.gz"],
)
